--- a/.github/workflows/naev_ci.yml
+++ b/.github/workflows/naev_ci.yml
@@ -33,7 +33,9 @@ jobs:
 
   "Linux_Compile_Naev":
     needs: "Package_Source"
-
+    defaults:
+      run:
+        shell: bash
     strategy:
       fail-fast: false
       matrix:
@@ -118,10 +120,10 @@ jobs:
         id: appimageCompile
         run: |
           if [[ "$IMAGE_NAME" =~ "naev-steamfrankenruntime" ]]; then
-              ./source/utils/buildAppImage.sh -a -d -s source -b appImageBuild | tee appImageBuildLog.txt
+              ./source/utils/buildAppImage.sh -d -s source -b appImageBuild | tee appImageBuildLog.txt
               ls ${{ github.workspace }}/appImageBuild/AppDir >/dev/null || exit
           else
-            ./source/utils/buildAppImage.sh -d -s source -b appImageBuild | tee appImageBuildLog.txt
+            ./source/utils/buildAppImage.sh -d -i -s source -b appImageBuild | tee appImageBuildLog.txt
             ls ${{ github.workspace }}/appImageBuild/dist/*.AppImage >/dev/null || exit
           fi
 
