--- a/.github/workflows/naev_nightly.yml
+++ b/.github/workflows/naev_nightly.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Extract Source
         run: |
           mkdir source
-          tar -xf naev-dist/naev-*.tar.xz -C source --strip 1
+          tar -xf ${{ github.workspace }}/naev-dist/naev-*.tar.xz -C source --strip 1
 
       - name: Meson Setup
         run: |
