Shot at the dark
Here goes another 20 mins..

--- a/.github/workflows/naev_nightly.yml
+++ b/.github/workflows/naev_nightly.yml
@@ -182,10 +182,11 @@ jobs:
 
       - name: Package AppImage
         run: |
-              chmod +x naev-appimage-packaging/buildAppImage.sh
+              ls
+              chmod +x buildAppImage.sh
               tar -Jxf "naev-linux-appdir-x86-64/naev-appdir.tar.xz"
               ls
-              ./naev-appimage-packaging/buildAppImage.sh -d -n -a "./AppDir" -b build
+              ./buildAppImage.sh -d -n -a "./AppDir" -b build
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
